<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
android:background="@drawable/bg_body"
    tools:context=".logIn_store">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="223dp"
        android:layout_height="195dp"
        android:fontFamily="@font/fjalla_one"
        android:gravity="center"
        android:text="@string/title_login_store"
        android:textColor="@color/text1"
        android:textSize="30sp"
        app:drawableTopCompat="@drawable/store_login_svg"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.091" />

    <EditText
        android:id="@+id/email_id"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="72dp"
        android:autofillHints=""
        android:background="@drawable/bg_box"
        android:drawableStart="@drawable/email_picture"
        android:ems="10"
        android:fontFamily="@font/righteous"
        android:gravity="center"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:paddingStart="30dp"
        android:textColor="@color/text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <EditText
        android:id="@+id/password_id"
        android:layout_width="350dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:autofillHints=""
        android:background="@drawable/bg_box"
        android:drawableStart="@drawable/lock_picture"
        android:ems="10"
        android:fontFamily="@font/righteous"
        android:gravity="center"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:paddingStart="24dp"
        android:textColor="@color/text2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_id" />

    <Button
        android:id="@+id/sign_up_store_id"
        android:layout_width="123dp"
        android:layout_height="48dp"
        android:layout_marginTop="596dp"
        android:background="@drawable/bg_secound_button"
        android:fontFamily="@font/righteous"
        android:text="@string/sign_up_button"
        android:textAllCaps="false"
        android:textColor="@color/text2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/log_in_id"
        android:layout_width="356dp"
        android:layout_height="50dp"
        android:layout_marginTop="504dp"
        android:background="@drawable/bg_master_button"
        android:fontFamily="@font/righteous"
        android:text="@string/log_in_button"
        android:textAllCaps="false"
        android:textColor="@color/text2"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="145dp"
        android:layout_height="33dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/forget_password"
        android:textColor="@color/text1"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.544"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_id" />

</androidx.constraintlayout.widget.ConstraintLayout>