<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_body"
    android:orientation="vertical"
    tools:context=".signUpStore">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/state_signup_id"
                android:layout_width="@dimen/size_box_width_signup"
                android:layout_height="@dimen/size_box_height_signup"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="700dp"
                android:background="@drawable/bg_box2"
                android:ems="10"
                android:fontFamily="@font/righteous"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textSize="@dimen/size_text_sign_up_box"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="600dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/country_sign_up"
                android:textColor="@color/text1"
                android:textSize="@dimen/size_text_sign_up_label" />

            <EditText
                android:id="@+id/password_signup_id"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_box_height_signup"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="445dp"
                android:background="@drawable/bg_box2"
                android:ems="10"
                android:fontFamily="@font/righteous"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textSize="@dimen/size_text_sign_up_box"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="510dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/re_password_sign_up"
                android:textColor="@color/text1"
                android:textSize="@dimen/size_text_sign_up_label" />

            <TextView
                android:id="@+id/textView12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="425dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/password_sign_up"
                android:textColor="@color/text1"
                android:textSize="@dimen/size_text_sign_up_label" />

            <EditText
                android:id="@+id/phone_signup_id"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_box_height_signup"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="360dp"
                android:background="@drawable/bg_box2"
                android:ems="10"
                android:fontFamily="@font/righteous"
                android:inputType="phone"
                android:maxLength="10"
                android:paddingLeft="15dp"
                android:textSize="@dimen/size_text_sign_up_box"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="340dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/phone_sign_up"
                android:textColor="@color/text1"
                android:textSize="@dimen/size_text_sign_up_label" />

            <EditText
                android:id="@+id/repassword_signup_id"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/size_box_height_signup"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="530dp"
                android:background="@drawable/bg_box2"
                android:ems="10"
                android:fontFamily="@font/righteous"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:textSize="@dimen/size_text_sign_up_box"
                tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="680dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/state_sign_up"
                android:textColor="@color/text1"
                android:textSize="@dimen/size_text_sign_up_label" />

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="210dp"
                android:layout_marginTop="600dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/business_rule_sign_up"
                android:textColor="@color/text1"
                android:textSize="@dimen/size_text_sign_up_label" />

            <Spinner
                android:id="@+id/country_signup_id"
                android:layout_width="@dimen/size_box_width_signup"
                android:layout_height="@dimen/size_box_height_signup"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="620dp"
                android:background="@drawable/bg_box2"
                tools:ignore="SpeakableTextPresentCheck" />

            <Spinner
                android:id="@+id/business_signup_id"
                android:layout_width="@dimen/size_box_width_signup"
                android:layout_height="@dimen/size_box_height_signup"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="210dp"
                android:layout_marginTop="620dp"
                android:background="@drawable/bg_box2"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/prev_button_id"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"

                android:layout_marginStart="26dp"
                android:layout_marginTop="800dp"
                android:layout_marginBottom="150dp"
                android:background="@drawable/bg_secound_button"
                android:drawableStart="?attr/actionModeCloseDrawable"
                android:text="@string/prev_button_signup"
                tools:ignore="TextContrastCheck" />

            <TextView
                android:id="@+id/textView14"
                android:layout_width="199dp"
                android:layout_height="47dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="12dp"
                android:layout_marginTop="57dp"
                android:layout_marginEnd="246dp"
                android:fontFamily="@font/righteous"
                android:text="@string/img_upload"
                android:textColor="@color/text1"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/name_signup_id"
                android:layout_width="@dimen/size_box_width_signup"
                android:layout_height="@dimen/size_box_height_signup"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="171dp"
                android:background="@drawable/bg_box2"
                android:ems="10"
                android:fontFamily="@font/righteous"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textColor="@color/text2"
                android:textColorHint="#3F51B5"
                android:textSize="@dimen/size_text_sign_up_box"
                tools:ignore="SpeakableTextPresentCheck" />

            <EditText
                android:id="@+id/user_name_signup_id"
                android:layout_width="174dp"
                android:layout_height="48dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="199dp"
                android:layout_marginTop="172dp"
                android:background="@drawable/bg_box2"
                android:ems="10"
                android:fontFamily="@font/righteous"
                android:gravity="center"
                android:inputType="textPersonName"
                android:textSize="@dimen/size_text_sign_up_box"
                tools:ignore="SpeakableTextPresentCheck" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="148dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/name_sign_up"
                android:textColor="@color/text1"
                android:textSize="@dimen/size_text_sign_up_label" />

            <TextView
                android:id="@+id/textView13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="198dp"
                android:layout_marginTop="150dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/user_name_sign_up"
                android:textColor="@color/text1"
                android:textSize="@dimen/size_text_sign_up_label" />

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="250dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/email_sign_up"
                android:textColor="@color/text1"
                android:textSize="@dimen/size_text_sign_up_label" />

            <EditText
                android:id="@+id/email_signup_id"
                android:layout_width="338dp"
                android:layout_height="@dimen/size_box_height_signup"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="15dp"
                android:layout_marginTop="270dp"
                android:background="@drawable/bg_box2"
                android:ems="10"
                android:fontFamily="@font/righteous"
                android:foregroundTint="#8A0D0D"
                android:inputType="textEmailAddress"
                android:paddingStart="15dp"
                android:textSize="@dimen/size_text_sign_up_box"
                tools:ignore="SpeakableTextPresentCheck" />

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="89dp"
                android:layout_height="80dp"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="149dp"
                android:src="@drawable/store_login_svg" />

            <Button
                android:id="@+id/signup_button_id"
                android:layout_width="150dp"
                android:layout_height="55dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="217dp"
                android:layout_marginTop="798dp"
                android:layout_marginBottom="150dp"
                android:background="@drawable/bg_master_button"
                android:text="@string/sign20_button"
                tools:ignore="TextContrastCheck" />

        </RelativeLayout>
    </ScrollView>
</LinearLayout>